number out of bound fix

--- a/style.scss
+++ b/style.scss
@@ -1,161 +1,161 @@
 html {
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 
-    font-family: inherit;
-    font-size: inherit;
+  font-family: inherit;
+  font-size: inherit;
 }
 
 button {
-    font-family: inherit;
-    font-size: 100%;
+  font-family: inherit;
+  font-size: 100%;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 html,
 body {
-    height: 100%;
-    overflow: hidden;
+  height: 100%;
+  overflow: hidden;
 }
 
 body {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
 
-    color: white;
-    background-color: hsl(0, 0%, 12%);
+  color: white;
+  background-color: hsl(0, 0%, 12%);
 }
 
 main {
-    margin-top: -12em;
-    padding: 3em 2em;
-    border: 0.1em solid hsl(0, 0%, 24%);
-    border-radius: 0.5em;
+  margin-top: -12em;
+  padding: 2.50em;
+  border: 0.1em solid hsl(0, 0%, 24%);
+  border-radius: 0.5em;
 }
 
 #equation {
-    text-align: end;
-    padding: 0.25em 0;
+  text-align: end;
+  padding: 0.25em 0;
 }
 
 #currentNum {
-    text-align: end;
-    font-size: 2.5rem;
-    font-weight: 600;
-    text-align: end;
-    padding: 0.25em 0;
+  text-align: end;
+  font-size: 1.625rem;
+  font-weight: 600;
+  text-align: end;
+  padding: 0.5em 0 1em 0;
 }
 
 #keys {
+  position: relative;
+
+  display: grid;
+  grid-template: repeat(5, 3em) / repeat(4, 5em);
+  gap: 0.5em;
+
+  padding: 0.25em;
+  background-size: 0 0;
+
+  button {
     position: relative;
+    border: none;
 
-    display: grid;
-    grid-template: repeat(5, 3em) / repeat(4, 5em);
-    gap: 0.5em;
+    color: white;
+    background-color: hsl(0, 0%, 6%);
+  }
 
-    padding: 0.25em;
-    background-size: 0 0;
+  button.number {
+    font-weight: 600;
+    background-color: hsl(0, 0%, 0%);
+  }
 
-    button {
-        position: relative;
-        border: none;
+  button:hover {
+    background-color: hsl(0, 0%, 24%);
+  }
 
-        color: white;
-        background-color: hsl(0, 0%, 6%);
-    }
+  button:active {
+    background-color: hsl(0, 0%, 36%);
+  }
 
-    button.number {
-        font-weight: 600;
-        background-color: hsl(0, 0%, 0%);
-    }
+  button:before {
+    box-sizing: content-box;
+    content: "";
+    z-index: -5;
 
-    button:hover {
-        background-color: hsl(0, 0%, 24%);
-    }
+    border: 0.125em solid hsl(0, 0%, 6%);
+    display: block;
+    position: absolute;
+    top: -0.125em;
+    left: -0.125em;
+    width: 5em;
+    height: 3em;
+  }
 
-    button:active {
-        background-color: hsl(0, 0%, 36%);
-    }
+  button.number:before {
+    border: 0.125em solid hsl(0, 0%, 0%);
+  }
 
-    button:before {
-        box-sizing: content-box;
-        content: "";
-        z-index: -5;
+  button:after {
+    box-sizing: content-box;
+    content: "";
 
-        border: 0.125em solid hsl(0, 0%, 6%);
-        display: block;
-        position: absolute;
-        top: -0.125em;
-        left: -0.125em;
-        width: 5em;
-        height: 3em;
-    }
-
-    button.number:before {
-        border: 0.125em solid hsl(0, 0%, 0%);
-    }
-
-    button:after {
-        box-sizing: content-box;
-        content: "";
-
-        border: 0.125em solid hsl(0, 0%, 12%);
-        display: block;
-        position: absolute;
-        top: -0.25em;
-        left: -0.25em;
-        width: 5.25em;
-        height: 3.25em;
-    }
+    border: 0.125em solid hsl(0, 0%, 12%);
+    display: block;
+    position: absolute;
+    top: -0.25em;
+    left: -0.25em;
+    width: 5.25em;
+    height: 3.25em;
+  }
 }
 
 #keys:after {
-    z-index: -2;
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background:
-        radial-gradient(closest-side, hsla(0, 0%, 100%, 0.4), hsla(0, 0%, 100%, 0)) fixed no-repeat;
+  z-index: -2;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background:
+    radial-gradient(closest-side, hsla(0, 0%, 100%, 0.4), hsla(0, 0%, 100%, 0)) fixed no-repeat;
 
-    background-size: 15em 15em;
-    background-position: inherit;
+  background-size: 15em 15em;
+  background-position: inherit;
 }
 
 #code {
-    font-family: 'Courier New', Courier, monospace;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    padding: 0.5em 1em;
-    margin: 0.5em;
+  font-family: 'Courier New', Courier, monospace;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 0.5em 1em;
+  margin: 0.5em;
 
-    border-radius: 10px;
-    background-color: hsl(0, 0%, 0%);
-    color: white;
+  border-radius: 10px;
+  background-color: hsl(0, 0%, 0%);
+  color: white;
 }
 
 #code:hover {
-    background-color: hsl(0, 0%, 24%);
+  background-color: hsl(0, 0%, 24%);
 }
 
 #code:active {
-    background-color: hsl(0, 0%, 36%);
+  background-color: hsl(0, 0%, 36%);
 }
